[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/ActionSelector/PlayerExtra.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/swordandgun/CowboyExtra.gd" type="Script" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]
[ext_resource path="res://characters/swordandgun/sprites/action_buttons/foresight_tp.png" type="Texture" id=4]
[ext_resource path="res://characters/swordandgun/sprites/action_buttons/foresight_explode.png" type="Texture" id=5]
[ext_resource path="res://characters/swordandgun/sprites/action_buttons/milk.png" type="Texture" id=6]

[node name="PlayerExtra" instance=ExtResource( 1 )]
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="." index="0"]
margin_right = 64.0
margin_bottom = 360.0
alignment = 1

[node name="ShootButton" type="CheckButton" parent="VBoxContainer" index="0"]
unique_name_in_owner = true
margin_top = 147.0
margin_right = 64.0
margin_bottom = 159.0
size_flags_vertical = 0
text = "Draw"

[node name="TpButton" type="CheckButton" parent="VBoxContainer" index="1"]
unique_name_in_owner = true
margin_top = 160.0
margin_right = 64.0
margin_bottom = 177.0
size_flags_vertical = 0
text = "Shift"
icon = ExtResource( 4 )

[node name="DetonateButton" type="CheckButton" parent="VBoxContainer" index="2"]
unique_name_in_owner = true
margin_top = 178.0
margin_right = 64.0
margin_bottom = 195.0
size_flags_vertical = 0
text = "Rift"
icon = ExtResource( 5 )

[node name="MilkButton" type="CheckButton" parent="VBoxContainer" index="3"]
unique_name_in_owner = true
margin_top = 196.0
margin_right = 64.0
margin_bottom = 213.0
size_flags_vertical = 0
custom_colors/font_color_disabled = Color( 0.498039, 0.270588, 0.45098, 1 )
custom_colors/font_color_focus = Color( 0.831373, 0.25098, 0.713726, 1 )
custom_colors/font_color_hover_pressed = Color( 0.831373, 0.25098, 0.713726, 1 )
custom_colors/font_color = Color( 0.831373, 0.25098, 0.713726, 1 )
custom_colors/font_color_hover = Color( 0.831373, 0.25098, 0.713726, 1 )
custom_colors/font_color_pressed = Color( 0.831373, 0.25098, 0.713726, 1 )
text = "Drift"
icon = ExtResource( 6 )

[connection signal="toggled" from="VBoxContainer/TpButton" to="." method="_on_TpButton_toggled"]
[connection signal="toggled" from="VBoxContainer/DetonateButton" to="." method="_on_DetonateButton_toggled"]
[connection signal="toggled" from="VBoxContainer/MilkButton" to="." method="_on_MilkButton_toggled"]
